k3s-userapps/terminus/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminus
  namespace: terminus
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 2345
  selector:
    app.kubernetes.io/pod: terminus
  type: ClusterIP
